# quantumrag

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.ko.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  quantumrag-local.yaml.example  quantumrag.yaml.example
.github/workflows/: ci.yml
datasets/: STATUS.md  debug_retrieval.py  noise_generator.py  run_qa.py  run_qa_combined.py  run_qa_retrieval.py
datasets/ds-001/: manifest.yaml  qa.yaml
datasets/ds-001/analysis/: analysis-run-7dec533-20260327-191233.md  improvements.md
datasets/ds-001/runs/: run-7dec533-20260327-191233.yaml  run-7dec533-20260328-231555.yaml  run-7dec533-20260328-231840.yaml  run-7dec533-20260328-234437.yaml
datasets/ds-001/sources/: 001.md  002.md  003.md  004.md
datasets/ds-002/: manifest.yaml  qa.yaml
datasets/ds-003/: manifest.yaml  qa.yaml
datasets/ds-004/: manifest.yaml  qa.yaml
docs/en/: advanced-features.md  api-reference.md  architecture.md  configuration.md  connectors.md  evaluation.md  getting-started.md  index.md  introduction.md  korean-support.md  plugins.md  troubleshooting.md
docs/ko/: advanced-features.md  api-reference.md  architecture.md  configuration.md  connectors.md  evaluation.md  getting-started.md  index.md  introduction.md  korean-support.md  plugins.md  troubleshooting.md
docs/pr/: introducing-quantumrag-en.md  introducing-quantumrag-ko.md
docs/reports/: prd-v0.4.md  scenario-test-report.md  upgrade-final-v0.3.md  upgrade-plan-v0.3.md
examples/: api_server.py  batch_processing.py  chat.py  custom_plugin.py  evaluation.py  korean_rag.py  local_ollama.py  pdf_qa.py  quickstart.py
quantumrag/: __init__.py
quantumrag/api/: __init__.py  middleware.py  models.py  playground.py  server.py  sse.py
quantumrag/cli/: main.py
quantumrag/connectors/: __init__.py  base.py  file.py  gdrive.py  notion.py  s3.py  url.py
quantumrag/core/: batch.py  config.py  engine.py  errors.py  logging.py  models.py  watcher.py
quantumrag/korean/: __init__.py  encoding.py  morphology.py
quantumrag/plugins/: __init__.py  registry.py
test_docs/: 2025_plan.hwpx  business_review.pptx  company_info.md  competitor_analysis.md  customer_cases.md  customer_revenue.xlsx  email_thread.md  financial_summary.csv  hr_policy.txt  meeting_minutes.md  org_chart.csv  patent_summary.md  product_changelog.md  project_roadmap.md  security_audit.md  service_agreement.txt  support_faq.txt  technical_guide.md  technical_proposal.docx
tests/: run_engine_e2e.py  run_scenario_tests.py  verify_llm_apis.py
tests/integration/: test_e2e_pipeline.py
tests/scale/: corpus_generator.py  needles.yaml  run_scale_test.py
tests/scenarios/: README.md
tests/security/: test_security.py
tests/unit/: test_api.py  test_autotune.py  test_batch.py  test_batch_chunks.py  test_cache_and_observability.py  test_chunkers.py  test_cli.py  test_completeness.py  test_config.py  test_config_extraction.py  test_engine.py  test_engine_integration.py  test_errors.py  test_evaluation.py  test_fact_verifier.py  test_fusion.py  test_gemini.py  test_ingest_modes.py  test_llm.py  test_llm_errors.py  test_middleware_security.py  test_models.py  test_parsers.py  test_path_traversal.py  test_phase2.py  test_pipeline.py  test_plugins.py  test_plugins_and_multitenancy.py  test_postprocess.py  test_rate_limiter.py  test_request_id.py  test_rerankers_and_budget.py  test_retrieval.py  test_rewriter.py  test_run_sync.py  test_slow_retrieval.py  test_ssrf_protection.py  test_storage.py  test_storage_factory.py  test_temp_cleanup.py  (+2 more)
(+134 files in other folders)
